# unicode-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md
examples/: basic_usage.rs  file_browser.rs  git_status.rs  security_analysis.rs
src/: lib.rs
src/unicode/: arrows.rs  blocks.rs  editor.rs  file_types.rs  git.rs  mod.rs  security.rs  shapes.rs  status.rs  symbols.rs  ui.rs
